--- a/DSSExport/.classpath
+++ b/DSSExport/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="java"/>
+	<classpathentry kind="src" path="lib"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="/home/stephen/workspace/DSSExport/bin/jars/commons-cli-1.3.1.jar"/>
 	<classpathentry kind="lib" path="/home/stephen/workspace/DSSExport/bin/jars/commons-codec-1.9.jar"/>
